--- a/public/tailwind-style.css
+++ b/public/tailwind-style.css
@@ -1749,13 +1749,6 @@ html {
   flex-grow: 1;
 }
 
-.card-actions {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  gap: 0.5rem;
-}
-
 .card figure {
   display: flex;
   align-items: center;
@@ -2443,14 +2436,6 @@ html {
   top: -5rem;
 }
 
-.top-32 {
-  top: 8rem;
-}
-
-.-top-4 {
-  top: -1rem;
-}
-
 .right-0 {
   right: 0px;
 }
@@ -2463,16 +2448,100 @@ html {
   top: 68px;
 }
 
+.-top-8 {
+  top: -2rem;
+}
+
+.top-8 {
+  top: 2rem;
+}
+
+.-top-24 {
+  top: -6rem;
+}
+
+.right-8 {
+  right: 2rem;
+}
+
+.left-8 {
+  left: 2rem;
+}
+
+.left-24 {
+  left: 6rem;
+}
+
+.-right-8 {
+  right: -2rem;
+}
+
+.-right-48 {
+  right: -12rem;
+}
+
+.-right-40 {
+  right: -10rem;
+}
+
+.top-12 {
+  top: 3rem;
+}
+
+.-top-12 {
+  top: -3rem;
+}
+
+.-right-56 {
+  right: -14rem;
+}
+
+.-top-10 {
+  top: -2.5rem;
+}
+
+.right-56 {
+  right: 14rem;
+}
+
+.right-10 {
+  right: 2.5rem;
+}
+
+.top-24 {
+  top: 6rem;
+}
+
+.right-12 {
+  right: 3rem;
+}
+
+.right-20 {
+  right: 5rem;
+}
+
 .z-50 {
   z-index: 50;
 }
 
-.order-last {
-  order: 9999;
+.z-10 {
+  z-index: 10;
 }
 
-.col-span-3 {
-  grid-column: span 3 / span 3;
+.z-0 {
+  z-index: 0;
+}
+
+.-z-10 {
+  z-index: -10;
+}
+
+.-z-0 {
+  z-index: 0;
+}
+
+.order-last {
+  order: 9999;
 }
 
 .m-3\.5 {
@@ -2498,11 +2567,6 @@ html {
   margin-bottom: 1.5rem;
 }
 
-.my-0 {
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -2511,6 +2575,11 @@ html {
 .mx-3 {
   margin-left: 0.75rem;
   margin-right: 0.75rem;
+}
+
+.mx-20 {
+  margin-left: 5rem;
+  margin-right: 5rem;
 }
 
 .ml-2 {
@@ -2539,6 +2608,18 @@ html {
 
 .mr-5 {
   margin-right: 1.25rem;
+}
+
+.ml-10 {
+  margin-left: 2.5rem;
+}
+
+.mr-40 {
+  margin-right: 10rem;
+}
+
+.mt-20 {
+  margin-top: 5rem;
 }
 
 .block {
@@ -2579,6 +2660,22 @@ html {
 
 .h-10 {
   height: 2.5rem;
+}
+
+.h-24 {
+  height: 6rem;
+}
+
+.h-28 {
+  height: 7rem;
+}
+
+.h-20 {
+  height: 5rem;
+}
+
+.h-96 {
+  height: 24rem;
 }
 
 .min-h-\[60vh\] {
@@ -2633,6 +2730,22 @@ html {
   width: 66.666667%;
 }
 
+.w-20 {
+  width: 5rem;
+}
+
+.w-28 {
+  width: 7rem;
+}
+
+.w-3\/4 {
+  width: 75%;
+}
+
+.w-\[80\%\] {
+  width: 80%;
+}
+
 .flex-none {
   flex: none;
 }
@@ -2657,10 +2770,6 @@ html {
   cursor: pointer;
 }
 
-.grid-cols-4 {
-  grid-template-columns: repeat(4, minmax(0, 1fr));
-}
-
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -2669,20 +2778,16 @@ html {
   flex-direction: column;
 }
 
+.flex-col-reverse {
+  flex-direction: column-reverse;
+}
+
 .flex-wrap {
   flex-wrap: wrap;
 }
 
-.items-end {
-  align-items: flex-end;
-}
-
 .items-center {
   align-items: center;
-}
-
-.justify-end {
-  justify-content: flex-end;
 }
 
 .justify-center {
@@ -2711,6 +2816,18 @@ html {
 
 .gap-12 {
   gap: 3rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-10 {
+  gap: 2.5rem;
+}
+
+.gap-0 {
+  gap: 0px;
 }
 
 .whitespace-nowrap {
@@ -2788,6 +2905,16 @@ html {
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
 
+.bg-red-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--tw-bg-opacity));
+}
+
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
@@ -2852,6 +2979,10 @@ html {
   padding: 0.875rem;
 }
 
+.p-20 {
+  padding: 5rem;
+}
+
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
@@ -2907,6 +3038,36 @@ html {
   padding-bottom: 0.625rem;
 }
 
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+}
+
+.py-32 {
+  padding-top: 8rem;
+  padding-bottom: 8rem;
+}
+
+.py-20 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
+.px-20 {
+  padding-left: 5rem;
+  padding-right: 5rem;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
+
+.px-40 {
+  padding-left: 10rem;
+  padding-right: 10rem;
+}
+
 .pb-12 {
   padding-bottom: 3rem;
 }
@@ -2939,12 +3100,36 @@ html {
   padding-top: 1rem;
 }
 
+.pt-10 {
+  padding-top: 2.5rem;
+}
+
+.pt-16 {
+  padding-top: 4rem;
+}
+
 .text-center {
   text-align: center;
 }
 
 .text-justify {
   text-align: justify;
+}
+
+.align-middle {
+  vertical-align: middle;
+}
+
+.font-sans {
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.font-mono {
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+}
+
+.font-serif {
+  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
 }
 
 .text-3xl {
@@ -2957,20 +3142,8 @@ html {
   line-height: 2rem;
 }
 
-.text-\[2vw\] {
-  font-size: 2vw;
-}
-
-.text-\[8vw\] {
-  font-size: 8vw;
-}
-
-.text-\[10vw\] {
-  font-size: 10vw;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
+.text-9xl {
+  font-size: 8rem;
   line-height: 1;
 }
 
@@ -2979,16 +3152,37 @@ html {
   line-height: 1.75rem;
 }
 
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .font-semibold {
   font-weight: 600;
 }
 
 .font-bold {
   font-weight: 700;
-}
-
-.leading-tight {
-  line-height: 1.25;
 }
 
 .text-white {
@@ -3005,21 +3199,6 @@ html {
   color: rgb(203 213 225 / var(--tw-text-opacity));
 }
 
-.text-purple-500 {
-  --tw-text-opacity: 1;
-  color: rgb(168 85 247 / var(--tw-text-opacity));
-}
-
-.text-slate-700 {
-  --tw-text-opacity: 1;
-  color: rgb(51 65 85 / var(--tw-text-opacity));
-}
-
-.text-slate-500 {
-  --tw-text-opacity: 1;
-  color: rgb(100 116 139 / var(--tw-text-opacity));
-}
-
 .text-indigo-600 {
   --tw-text-opacity: 1;
   color: rgb(79 70 229 / var(--tw-text-opacity));
@@ -3030,17 +3209,19 @@ html {
   color: rgb(148 163 184 / var(--tw-text-opacity));
 }
 
+.text-purple-500 {
+  --tw-text-opacity: 1;
+  color: rgb(168 85 247 / var(--tw-text-opacity));
+}
+
+.text-slate-500 {
+  --tw-text-opacity: 1;
+  color: rgb(100 116 139 / var(--tw-text-opacity));
+}
+
 .text-slate-200 {
   --tw-text-opacity: 1;
   color: rgb(226 232 240 / var(--tw-text-opacity));
-}
-
-.underline {
-  text-decoration-line: underline;
-}
-
-.underline-offset-8 {
-  text-underline-offset: 8px;
 }
 
 .opacity-0 {
@@ -3083,13 +3264,14 @@ html {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
-.hover\:bg-indigo-700\/90:hover {
-  background-color: rgb(67 56 202 / 0.9);
-}
-
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-indigo-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(79 70 229 / var(--tw-bg-opacity));
 }
 
 .hover\:from-indigo-200:hover {
@@ -3115,6 +3297,11 @@ html {
 .hover\:text-indigo-600:hover {
   --tw-text-opacity: 1;
   color: rgb(79 70 229 / var(--tw-text-opacity));
+}
+
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .hover\:backdrop-blur-sm:hover {
@@ -3159,16 +3346,6 @@ html {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.group:hover .group-hover\:text-slate-300 {
-  --tw-text-opacity: 1;
-  color: rgb(203 213 225 / var(--tw-text-opacity));
-}
-
-.group:hover .group-hover\:text-slate-400 {
-  --tw-text-opacity: 1;
-  color: rgb(148 163 184 / var(--tw-text-opacity));
-}
-
 @media (min-width: 768px) {
   .md\:static {
     position: static;
@@ -3178,12 +3355,40 @@ html {
     top: -4rem;
   }
 
-  .md\:-top-28 {
-    top: -7rem;
-  }
-
   .md\:-top-12 {
     top: -3rem;
+  }
+
+  .md\:-top-24 {
+    top: -6rem;
+  }
+
+  .md\:-right-0 {
+    right: -0px;
+  }
+
+  .md\:top-24 {
+    top: 6rem;
+  }
+
+  .md\:top-20 {
+    top: 5rem;
+  }
+
+  .md\:-right-10 {
+    right: -2.5rem;
+  }
+
+  .md\:-right-40 {
+    right: -10rem;
+  }
+
+  .md\:right-10 {
+    right: 2.5rem;
+  }
+
+  .md\:top-32 {
+    top: 8rem;
   }
 
   .md\:order-first {
@@ -3203,6 +3408,10 @@ html {
     margin-left: 0px;
   }
 
+  .md\:mt-0 {
+    margin-top: 0px;
+  }
+
   .md\:flex {
     display: flex;
   }
@@ -3211,8 +3420,16 @@ html {
     display: none;
   }
 
+  .md\:h-28 {
+    height: 7rem;
+  }
+
   .md\:w-auto {
     width: auto;
+  }
+
+  .md\:w-28 {
+    width: 7rem;
   }
 
   .md\:basis-0 {
@@ -3243,6 +3460,18 @@ html {
     justify-content: space-between;
   }
 
+  .md\:gap-24 {
+    gap: 6rem;
+  }
+
+  .md\:gap-20 {
+    gap: 5rem;
+  }
+
+  .md\:gap-12 {
+    gap: 3rem;
+  }
+
   .md\:bg-transparent {
     background-color: transparent;
   }
@@ -3257,16 +3486,18 @@ html {
     padding-right: 0px;
   }
 
+  .md\:py-32 {
+    padding-top: 8rem;
+    padding-bottom: 8rem;
+  }
+
+  .md\:py-24 {
+    padding-top: 6rem;
+    padding-bottom: 6rem;
+  }
+
   .md\:pb-0 {
     padding-bottom: 0px;
-  }
-
-  .md\:text-\[6vw\] {
-    font-size: 6vw;
-  }
-
-  .md\:text-\[5vw\] {
-    font-size: 5vw;
   }
 
   .md\:text-3xl {
@@ -3277,6 +3508,16 @@ html {
   .md\:text-5xl {
     font-size: 3rem;
     line-height: 1;
+  }
+
+  .md\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 
   .md\:opacity-100 {
@@ -3307,19 +3548,5 @@ html {
 
   .lg\:gap-32 {
     gap: 8rem;
-  }
-
-  .lg\:text-\[1vw\] {
-    font-size: 1vw;
-  }
-
-  .lg\:text-\[5vw\] {
-    font-size: 5vw;
-  }
-}
-
-@media (min-width: 1280px) {
-  .xl\:text-\[4vw\] {
-    font-size: 4vw;
   }
 }
