--- a/main/style.css
+++ b/main/style.css
@@ -1,7 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;700&display=swap');
 
-body{
+body {
     margin: 0;
     padding: 0;
     font-family: 'Source Sans Pro', sans-serif;
+}
+
+/* ---- particles.js container ---- */
+
+#particles-js{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+.swiper-button-prev::after, .swiper-button-next::after{
+    font-size: 16px;
+}
+
+.swiper-pagination-bullet{
+    height: 4px;
+    width: 24px;
+    border-radius: 0px;
+    background-color: #a855f7;
+}
+
+.blurr{
+    filter:blur(2px)
+}
+.swiper-slide-active{
+    filter: blur(0px);
 }
